namespace F1BettingApp.Domain.Enums
{
    public enum BetType
    {
        Unknown = 0,
        RaceWinner,
        PodiumFinish,
        Top10Finish,
        FastestLap
    }
}
